<resources>
    <string name="app_name">发票记录</string>
    <string name="str_no_content">暂时还没有内容哦</string>
    <string name="str_scan_single">单张识别</string>
    <string name="str_scan_multiple">多张识别</string>
    <string name="str_save">保存发票</string>
    <string name="str_exit">取消</string>
    <string name="str_export">导出</string>
    <string name="str_clear">清除内容</string>
    <string name="str_search">查询</string>
    <string name="str_output_path">导出位置：/storage/emulated/0/Android/data/ki.zq.remfp/files/</string>

    <string name="str_detail">详细信息</string>

    <string name="str_history_operation_share">分享台账</string>
    <string name="str_history_operation_output">导出记录</string>

    <string name="str_searchByTime">按开票时间查询</string>
    <string name="str_searchAll">查询全部</string>
    <string name="str_searchBtwStart">2023年01月01日</string>
    <string name="str_searchBtw">至</string>
    <string name="str_searchBtwEnd">2032年01月01日</string>

    <string name="item_str_fpCode">发票号码: %1s</string>
    <string name="item_str_fpFromCom">开票企业: %1s</string>
    <string name="item_str_fpAll">开票金额: %1s</string>

    <string name="str_scan_index1">报销人</string>
    <string name="str_scan_index2">受票单位</string>
    <string name="str_scan_index3">发票代码</string>
    <string name="str_scan_index4">发票号码</string>
    <string name="str_scan_index5">开票日期</string>
    <string name="str_scan_index6">发票明目</string>
    <string name="str_scan_index7">开票企业税号</string>
    <string name="str_scan_index8">开票企业名称</string>
    <string name="str_scan_index9">金额</string>
    <string name="str_scan_index10">税额</string>
    <string name="str_scan_index11">总计</string>
    <string name="str_scan_previous">上一张</string>
    <string name="str_scan_next">下一张</string>

    <string name="str_time_division">-</string>
    <string name="str_about">关于</string>
    <string name="str_search_all">查询全部</string>
    <string name="str_about_body">该软件的主要功能是：\n通过拍照扫描的方式，将发票的信息保存到软件的数据库中，同时还能导出到Excel表格。还支持对已经保存到数据库的记录进行分时段搜索、重新编辑，加快对发票登记电子台账的录入速度。我们需要做的仅仅是对扫描得到的结果进行检查，检查无误后再进行保存。</string>
    <!-- Preference Titles -->
    <string name="messages_header">一般设置</string>
    <!-- Messages Preferences -->
    <string name="prf_toPerson_title">报销人员</string>
    <string name="prf_docNumber_title">单据编号</string>
    <string name="prf_coastFor_title">费用说明</string>
    <string name="prf_clear_title">保存信息后清除页面</string>
    <string name="prf_base64_title">保存Base64编码记录</string>
</resources>