<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/action_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_record_scan_single"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_scan_single"
                app:drawableTopCompat="@drawable/ic_single_choose" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_record_scan_multiple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_scan_multiple"
                app:drawableTopCompat="@drawable/ic_muti_choose" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_record_scan_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_save"
                app:drawableTopCompat="@drawable/ic_save" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_record_scan_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_clear"
                app:drawableTopCompat="@drawable/ic_clear" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_record_scan_next"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="6dp"
        android:background="@drawable/btn_style"
        android:text="@string/str_scan_next"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_container" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_record_scan_next">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/scan_layout_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_toPerson"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:hint="@string/str_scan_index1"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/teal_200"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="@color/teal_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_toCompany"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_margin="3dp"
                android:hint="@string/str_scan_index2"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/teal_200"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="@color/teal_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_fpCode"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_margin="3dp"
                android:hint="@string/str_scan_index3"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/teal_200"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="@color/teal_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_fpNumber"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_margin="3dp"
                android:hint="@string/str_scan_index4"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/teal_200"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="@color/teal_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_fpDate"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_margin="3dp"
                android:hint="@string/str_scan_index5"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/teal_200"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="@color/teal_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_fpThing"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_margin="3dp"
                android:hint="@string/str_scan_index6"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/teal_200"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="@color/teal_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_fromCompanyCode"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_margin="3dp"
                android:hint="@string/str_scan_index7"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/teal_200"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="@color/teal_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_fromCompanyName"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_margin="3dp"
                android:hint="@string/str_scan_index8"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/teal_200"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="@color/teal_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_fpMoney"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:hint="@string/str_scan_index9"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/teal_200"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="@color/teal_200">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_fpTax"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:hint="@string/str_scan_index10"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/teal_200"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="@color/teal_200">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_fpAll"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:hint="@string/str_scan_index11"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/teal_200"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="@color/teal_200">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>