<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/action_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:elevation="6dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:padding="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_record_scan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/str_scan_single"
                app:drawableTopCompat="@drawable/ic_baseline_scan_24"
                app:layout_constraintEnd_toStartOf="@+id/tv_record_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_record_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_save"
                app:drawableTopCompat="@drawable/ic_baseline_save_24"
                app:layout_constraintEnd_toStartOf="@+id/tv_record_clear"
                app:layout_constraintStart_toEndOf="@+id/tv_record_scan"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_record_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/str_clear"
                app:drawableTopCompat="@drawable/ic_baseline_clear_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_record_save"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="8dp"
                android:background="#ddd"
                app:layout_constraintTop_toBottomOf="@+id/tv_record_save"
                tools:layout_editor_absoluteX="6dp" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nscScanResult"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@+id/view"
                tools:context=".ui.EditActivity"
                tools:ignore="HardcodedText"
                tools:layout_editor_absoluteX="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/scan_tiet_person"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="报销人"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/scan_tiet_toName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="受票单位"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/scan_tiet_fpCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="发票代码"
                            android:inputType="number"
                            android:maxLength="12"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/scan_tiet_fpNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="发票号码"
                            android:inputType="number"
                            android:maxLength="8"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/scan_tiet_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="开票日期"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/scan_tiet_thing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="发票名目"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/scan_tiet_fromCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="开票企业识别号"
                            android:maxLength="18"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/scan_tiet_fromName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="开票企业名称"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="6dp"
                            android:paddingEnd="6dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/scan_tiet_money"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="金额"
                                android:inputType="number"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="6dp"
                            android:paddingEnd="6dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/scan_tiet_tax"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="税额"
                                android:inputType="number"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_weight="1"
                            android:paddingStart="6dp"
                            android:paddingEnd="6dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/scan_tiet_all"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="合计"
                                android:inputType="number"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>